Complete functionality, work out bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   color: rgba(193, 91, 193, 0.754);
+  font-family: 'Griffy', cursive;
+  font-family: 'MedievalSharp', cursive;
 }
 
 #myvideo {
@@ -13,5 +15,22 @@
   top: 0;
   bottom: 0;
   z-index: -1;
+}
+
+h1 {
+  font-size: 300%;
+  text-shadow: 
+  1px 0px 1px purple, 0px 1px 1px #eee, 
+  2px 1px 1px purple, 1px 2px 1px #eee,
+  3px 2px 1px #ccc, 2px 3px 1px #eee,
+  4px 3px 1px #ccc, 3px 4px 1px #eee,
+  5px 4px 1px #ccc, 4px 5px 1px #eee,
+  6px 5px 1px #ccc, 5px 6px 1px #eee,
+  7px 6px 1px #ccc;
+}
+
+h1,
+h2 {
+  margin: 5px;
 }
 
