--- a/src/Ball.css
+++ b/src/Ball.css
@@ -1,7 +1,47 @@
-.ballSection {
+#ballSection {
     background-image: url('./magicBall.png');
     height: 500px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.triangleImg {
+    width: 175px;
+    z-index: 1;
+    position: absolute;
+    padding-top: 50px;
+}
+
+.response {
+    max-width: 100px;
+}
+
+.wiggle {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
